--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,6 @@ section.section__billing {
     border-radius: 3px;
 }
 button.btn-search {
-
     border: none;
 }
 
@@ -215,6 +214,10 @@ img.card-img-top {
     overflow: hidden;
     border-bottom: 3px solid #e9ecef;
 }
+.item__height:hover{
+    border: 1px solid #3f51b5;
+}
+
 .item__hover:hover img {
     -ms-transform: scale(1.3); /* IE 9 */
     -webkit-transform: scale(1.3); /* Safari 3-8 */
