--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -38,6 +38,123 @@ td.action-table {
 a.text-light.toggle-class {
     display: grid;
 }
-.hide-show{
-    display: none;
+
+.add__product__title {
+    background: #f8f9fa;
+    padding: 15px;
+}
+
+h2.product__title {
+    margin-bottom: 0px;
+}
+
+nav {
+	position: relative;
+
+}
+nav ul {
+	list-style: none;
+	margin: 0;
+    padding: 0;
+    padding: 15px;
+}
+
+nav ul li span {
+    padding: 0px 10px;
+}
+
+nav ul li a {
+    display: block;
+    background: #2f2f2e;
+    padding: 10px 0px;
+    color: #fff;
+    text-decoration: none;
+    -webkit-transition: 0.2s linear;
+    -moz-transition: 0.2s linear;
+    -ms-transition: 0.2s linear;
+    -o-transition: 0.2s linear;
+    transition: 0.2s linear;
+    margin: 0px 0px;
+    /* border-radius: 5px; */
+    width: 100%;
+    border: 1px solid #737373;
+}
+nav ul li a:hover {
+    background: #6f6f6e;
+    color: #f5f5f5;
+}
+nav ul li a .fa {
+	width: 16px;
+	text-align: center;
+	margin-right: 5px;
+	float:right;
+}
+nav ul ul {
+    background: #2f2f2e;
+    padding: 15px 0px 15px 15px;
+}
+nav ul li ul li a {
+    background: #2f2f2e;
+    border-left: 4px solid transparent;
+    padding: 10px 30px;
+    margin: 0px 0px 5px 0px;
+    border: 1px solid #737373;
+}
+nav ul li ul li a:hover {
+	background: #6f6f6e;
+	border-left: 4px solid #3498db;
+}
+nav.side-menu {
+    height: 100vh;
+    overflow: scroll;
+    background: #2f2f2e;
+}
+h1.side-bar-title {
+    background: #191918;
+    margin: 0px;
+    padding: 1px 0px;
+    font-weight: 600;
+    font-size: 30px;
+    color: #fff;
+    border-bottom: 1px solid #737373;
+}
+#scrool-bar::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #f5f5f5;
+  }
+
+  #scrool-bar::-webkit-scrollbar {
+    width: 12px;
+    background-color: #f5f5f5;
+  }
+
+  #scrool-bar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #555;
+  }
+  .sidebar-leftSide{
+      overflow: scroll;
+  }
+
+li.d-flex-div {
+    display: flex;
+    align-items: center;
+    background: #66d203;
+    margin-bottom: 5px;
+}
+li.sub-menu {
+    margin-bottom: 5px;
+}
+a.page-title {
+    padding-left: 10px;
+}
+.add__product__form{
+    background-color: #fff;
+    padding: 15px;
+    margin: 15px 0px;
+}
+.pagination__right.pagination__add_product {
+    bottom: 10px;
 }
