--- a/public/css/style.css
+++ b/public/css/style.css
@@ -229,6 +229,9 @@ img.card-img-top {
     width: 100%;
     height: 85px;
 }
-
+.table__list__part{
+    background-color: #fff;
+    padding: 20px;
+}
 
 
