--- a/public/css/style.css
+++ b/public/css/style.css
@@ -267,7 +267,7 @@ div#nav-tabContent {
 
 /* The side navigation menu */
 .side__show {
-    height: 100%; /* 100% Full-height */
+    height: 545px; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
@@ -276,7 +276,7 @@ div#nav-tabContent {
     background-color: #fff; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the side__show */
+    transition: 0.3s; /* 0.5 second transition effect to slide in the side__show */
     border: 1px solid rgb(168, 167, 167);
 }
 
