--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,14 +33,16 @@ button{
     width: 100%;
 }
 section.section__billing {
-    padding: 10px 0px 0px;
+    padding: 0px 0px 0px 0px;
     background: #e9ecef;
     position: relative;
     height: 100VH;
 }
 .item__right {
-    background-color: #fff;
-    padding: 10px 10px;
+    background-color: #ffffff;
+    padding: 10px 10px 0px 10px;
+    height: 100vh;
+    position: relative;
 }
 .row__margin {
     padding: 0px 0px 10px;
@@ -101,8 +103,8 @@ select.form-select {
 .total__chanrge {
     background: #e9ecef;
     text-align: center;
-    padding: 10px;
-    border-bottom: 5px solid #dc3545;
+    padding: 10px 10px 10px 10px;
+
 }
 
 .total__chanrge h1 {
@@ -121,7 +123,7 @@ select.form-select {
   display:block;
   width: 100%;
   overflow: auto;
-  height: 215px;
+  height: 260px;
   font-size: 14px;
 }
 
@@ -172,11 +174,12 @@ td.btn__cancel {
 }
 
 section.footer__part {
-    position: absolute;
-    left: 0;
-    bottom: 0;
     width: 100%;
-    background: #3F51B5;
+    background: #ffffff;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-bottom: 5px solid #3f51b5;
 }
 .pagination__right {
     position: absolute;
