--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -5,7 +5,7 @@
     position: relative;
 }
 section.add__categories {
-    background: #c7c2c2;
+    background: #f1f1f1;
 }
 li{
     list-style-type: none;
