--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,12 @@
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
     font-size: 14px;
 
 }
 img.login__img {
     margin-right: 5px;
 }
+
 img {
     width: 15px;
 }
@@ -68,18 +69,21 @@ button.btn-search:hover {
     background-color: #de4c1e;
 }
 button.add {
-    background: #66d203;
-    border: none;
     margin-left: 10px;
-    color: #fff;
-    border: 2px solid #66d203;
+    border: none;
+    background: #d6deff;
+    color: #846ec6;
+    border: 2px solid #d6deff;
+    font-size: 15px;
+    font-weight: 900;
 }
 button.minus {
-    border: none;
     margin-right: 10px;
-    background: #0dcaf0;
-    color: #fff;
-    border: 2px solid #0dcaf0;
+    background: #d6deff;
+    color: #846ec6;
+    border: 2px solid #d6deff;
+    font-size: 15px;
+    font-weight: 900;
 }
 button.cancel {
     background: #dc3545;
@@ -96,8 +100,6 @@ select.form-select {
 }
 
 .d-flex--part {
-    border: 1px solid #e9ecef;
-    border-bottom: 5px solid #e9ecef;
     margin-bottom: 2px;
 }
 .total__chanrge {
@@ -117,6 +119,12 @@ select.form-select {
     width: 100%;
     table-layout: fixed;
     border-collapse: collapse;
+}
+h2.add__table__title{
+    font-size: 32px;
+    color: #3F51B5;
+    font-weight: 600;
+    text-transform: uppercase;
 }
 
 .table-part tbody{
@@ -199,6 +207,8 @@ img.card-img-top {
     width: 100%;
     height: 100%;
     transition: transform .5s;
+    object-fit: cover;
+
 }
 .item__items{
     margin: 0;
