--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -61,7 +61,7 @@ nav ul {
 nav ul li span {
     padding: 0px 10px;
 }
-
+/*
 nav ul li a {
     display: block;
     background: #7355b5;
@@ -74,7 +74,7 @@ nav ul li a {
     -o-transition: 0.2s linear;
     transition: 0.2s linear;
     margin: 0px 0px;
-    /* border-radius: 5px; */
+
     border: 1px solid #c1c1c1;
 }
 nav ul li a:hover {
@@ -87,7 +87,7 @@ nav ul li a .fa {
 	margin-right: 5px;
 	float:right;
 }
-nav ul ul {
+ nav ul ul {
     background: #7c5cc4;
     padding: 15px 0px 15px 15px;
 }
@@ -114,7 +114,7 @@ h1.side-bar-title {
     font-size: 30px;
     color: #fff;
     border-bottom: 1px solid #c1c1c1;
-}
+} */
 #scrool-bar::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
