pos color changes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,7 +159,7 @@ select.form-select {
 }
 h2.add__table__title{
     font-size: 32px;
-    color: #525965;
+    color: #7c5cc4;
     font-weight: 600;
     text-transform: uppercase;
 }
@@ -200,7 +200,7 @@ th{
 thead {
     font-size: 14px;
     color: #fff;
-    background: #525965;
+    background: #7c5cc4;
 }
 .page-link {
     color: #17a2b8;
