--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -74,7 +74,7 @@
   }
 
   .page-wrapper .theme.chiller-theme {
-    background: #1e2229;
+    background: #7c5cc4;
   }
 
   /*----------------toggeled sidebar----------------*/
@@ -145,7 +145,6 @@
 
   .sidebar-wrapper .sidebar-brand > a {
     text-transform: uppercase;
-    font-weight: bold;
     flex-grow: 1;
   }
 
@@ -377,15 +376,15 @@
     height: 0px;
   }
   ::-webkit-scrollbar-thumb {
-    background: #525965;
+    background: #6b50aa;
     border: 0px none #ffffff;
     border-radius: 0px;
   }
   ::-webkit-scrollbar-thumb:hover {
-    background: #525965;
+    background: #6b50aa;
   }
   ::-webkit-scrollbar-thumb:active {
-    background: #525965;
+    background: #6b50aa;
   }
   ::-webkit-scrollbar-track {
     background: transparent;
@@ -406,13 +405,13 @@
   /*-----------------------------chiller-theme-------------------------------------------------*/
 
   .chiller-theme .sidebar-wrapper {
-      background: #31353D;
+      background: #7c5cc4;
   }
 
   .chiller-theme .sidebar-wrapper .sidebar-header,
   .chiller-theme .sidebar-wrapper .sidebar-search,
   .chiller-theme .sidebar-wrapper .sidebar-menu {
-      border-top: 1px solid #3a3f48;
+      border-top: 1px solid #694cac;
   }
 
   .chiller-theme .sidebar-wrapper .sidebar-search input.search-menu,
@@ -428,7 +427,7 @@
   .chiller-theme .sidebar-wrapper .sidebar-brand>a,
   .chiller-theme .sidebar-wrapper .sidebar-menu ul li a,
   .chiller-theme .sidebar-footer>a {
-      color: #818896;
+      color:#ffffff;
   }
 
   .chiller-theme .sidebar-wrapper .sidebar-menu ul li:hover>a,
@@ -436,16 +435,14 @@
   .chiller-theme .sidebar-wrapper .sidebar-header .user-info,
   .chiller-theme .sidebar-wrapper .sidebar-brand>a:hover,
   .chiller-theme .sidebar-footer>a:hover i {
-      color: #b8bfce;
+      color:#c3c3c4;
   }
 
   .page-wrapper.chiller-theme.toggled #close-sidebar {
       color: #bdbdbd;
   }
 
-  .page-wrapper.chiller-theme.toggled #close-sidebar:hover {
-      color: #ffffff;
-  }
+
 
   .chiller-theme .sidebar-wrapper ul li:hover a i,
   .chiller-theme .sidebar-wrapper .sidebar-dropdown .sidebar-submenu li a:hover:before,
@@ -459,7 +456,7 @@
   .chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown div,
   .chiller-theme .sidebar-wrapper .sidebar-search input.search-menu,
   .chiller-theme .sidebar-wrapper .sidebar-search .input-group-text {
-      background: #3a3f48;
+    background: #6b50aa;
   }
 
   .chiller-theme .sidebar-wrapper .sidebar-menu .header-menu span {
@@ -467,7 +464,7 @@
   }
 
   .chiller-theme .sidebar-footer {
-      background: #3a3f48;
+    background: #6b50aa;
       box-shadow: 0px -1px 5px #282c33;
       border-top: 1px solid #464a52;
   }
@@ -481,9 +478,10 @@
   }
 
 a.pos__link {
-    color: #818896;
-    border: 1px solid #818896;
-    padding: 2px 3px;
+    color: #f7f7f7;
+    border: 1px solid #f7f7f7;
+    padding: 3px 5px;
+    border-radius: 5px;
 }
 a.pos__link:hover{
     color: #17a2b8;
