--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,8 +42,6 @@ img {
 }
 .all__product {
     margin: 10px;
-    overflow: auto;
-    height: 480px;
 }
 /* new css change */
 h5.card-title {
@@ -405,6 +403,44 @@ img.table__images {
     transition: margin-left .5s;
     padding: 20px;
 }
+
+/* Customize website's scrollbar like Mac OS
+Not supports in Firefox and IE */
+
+/* total width */
+.scrollbar::-webkit-scrollbar {
+    background-color:#fff;
+    width:16px
+}
+
+
+
+
+/* scrollbar itself */
+.scrollbar::-webkit-scrollbar-thumb {
+    background-color:#babac0;
+    border-radius:16px;
+    border:5px solid #fff
+}
+
+
+/* set button(top and bottom of the scrollbar) */
+.scroll__class::-webkit-scrollbar-button {display:none}
+
+/* div box */
+body{background-color:#babac0}
+.scroll__class {
+    height: 75vh;
+
+    min-width: 480px;
+    background: #fff;
+
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+.all__product{min-height: 100vh}
+
+
 
 /* On smaller screens, where height is less than 450px, change the style of the side__show (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
