--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,11 +1,8 @@
 .login__section {
     height: 100vh;
     align-items: center;
-    background: white;
-
-
     position: relative;
-
+    background: #02020257;
 }
 
 .login__contain {
@@ -13,22 +10,24 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 33%;
+    width: 30%;
     margin: 0 auto;
-    border: 1px solid #c1c1c1;
+    border: 1px solid #ffffff;
     padding: 30px;
-    border-radius: 10px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 10px #ffffff;
 }
 input.form-control.login__input {
     line-height: 30px;
 }
 h2.login__title {
     width: 100%;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 26px;
     color: #3d3c3e;
     margin: 0px;
     margin-bottom: 10px;
+    text-transform: uppercase;
 }
 
 img.logo__img {
@@ -51,17 +50,27 @@ img.logo__img {
     height: 500px;
 }
 button.btn.btn-primary.btn-primary-login {
-    background-color: #38d39f;
-    border-color: #38d39f;
+    background-color: #1b142b;
+    border-color: #17152c;
     height: 45px;
     height: 54px;
     padding-left: 30px;
     padding-right: 30px;
     width: 100%;
+    text-transform: uppercase;
+
+}
+button.btn.btn-primary.btn-primary-login:hover{
+    background-color: #27204e;
+    border-color: #27204e;
 }
 p.login__text {
-    color: #b3b3b3;
-    font-weight: 300;
+    color: #e8f0fe;
     margin-bottom: 0px;
     font-size: 15px;
+    font-weight: 500;
+}
+.login__images{
+    background-image: url('../img/background.jpg');
+    background-size: cover;
 }
