--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,8 +12,8 @@ button.btn.btn-primary.font-btn-part {
 
 .btn-primary {
     color: #fff;
-    border-color: #17a2b8;
-    background: #17a2b8;
+    border-color: #607d8b;
+    background: #607d8b;
 }
 .btn-danger {
     border-color: #b33771;
@@ -159,7 +159,7 @@ select.form-select {
 }
 h2.add__table__title{
     font-size: 32px;
-    color: #7c5cc4;
+    color: #484c54;
     font-weight: 600;
     text-transform: uppercase;
 }
@@ -200,7 +200,7 @@ th{
 thead {
     font-size: 14px;
     color: #fff;
-    background: #7c5cc4;
+    background: #525965;
 }
 .page-link {
     color: #17a2b8;
@@ -227,7 +227,7 @@ section.footer__part {
     position: absolute;
     bottom: 0;
     left: 0;
-    border-bottom: 5px solid #7c5cc4;
+    border-bottom: 5px solid #525965;
 }
 .pagination__right {
     position: absolute;
