--- a/public/css/style.css
+++ b/public/css/style.css
@@ -464,7 +464,9 @@ body{background-color:#babac0}
     font-size: 20px;
     font-weight: 600;
 }
-
+a.dashbord-button {
+    display: inline-block;
+}
 .table-detail h2 a{
     color: #ffffff;
     font-size: 20px;
