--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,10 +196,13 @@ th{
     line-height: 1.50rem;
 
 }
-thead {
+.nav-padding{
+    padding: 5px 20px;
+}
+.table-head {
     font-size: 14px;
     color: #fff;
-    background: #4e73df;
+    background: #4b4f55;
 }
 .page-link {
     color: #17a2b8;
@@ -329,10 +332,7 @@ span.pos__div {
     padding: 0px;
     width: 100%;
 }
-div#nav-tabContent {
-    height: 250px;
-    overflow: scroll;
-}
+
 .footer__part__absolute {
     position: absolute;
     bottom: 0px;
@@ -381,6 +381,11 @@ img.table__images {
     border: 1px solid rgb(168, 167, 167);
 }
 
+.body-class {
+    background: #fff;
+    padding: 0px 30px 20px;
+    margin: 30px 0px;
+}
 
 
 /* When you mouse over the navigation links, change their color */
@@ -427,7 +432,6 @@ Not supports in Firefox and IE */
 .scroll__class::-webkit-scrollbar-button {display:none}
 
 /* div box */
-body{background-color:#babac0}
 .scroll__class {
     height: 75vh;
 
@@ -440,6 +444,60 @@ body{background-color:#babac0}
 .all__product{min-height: 100vh}
 
 
+a.nav-link.active.pos-class:hover{
+    border-color: #fff;
+}
+.nav-link {
+    padding: 0rem 0rem;
+}
+li.nav-item {
+    padding-left: 5px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    font-size: 11px;
+    text-transform: uppercase;
+    font-family: "Open Sans";
+}
+.navbar-dark .navbar-nav .nav-link {
+    color: #fff;
+}
+a.icon-height {
+    height: 38px;
+    width: 38px;
+    overflow: hidden;
+    padding-left: 20px;
+    display: inline-table;
+}
+a.icon-height img{
+    height: 38px;
+    width: 38px;
+    object-fit: cover;
+
+}
+p.icon-height {
+    line-height: 38px;
+    margin-bottom: 0px;
+    color: white;
+
+}
+p.icon-height img{
+    height: 38px;
+    width: 38px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+a.icon-logout {
+    font-size: 20px;
+    padding-left: 20px;
+    line-height: 38px;
+    color: #c1c1c1;
+}
+a.icon-logout:hover{
+    color: #7d7d7d;
+}
+.bg-dark {
+    background-color: #4b4f55!important;
+}
 
 /* On smaller screens, where height is less than 450px, change the style of the side__show (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
