--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@ body{
     font-family: 'Nunito Sans', sans-serif;
     font-size: 14px;
     color: #7d7d7d;
+    background: #f1f1f1;
 
 }
 button.btn.btn-primary.font-btn-part {
